Changed RecipeCalculatorModal to only show when the screen height is greater than 700px to avoid layout breaking.

--- a/styles/homepage/hero-section/HeroSection.module.scss
+++ b/styles/homepage/hero-section/HeroSection.module.scss
@@ -1,6 +1,6 @@
 .heroSection {
   //height: 41vh; on large screen
-  height: 61vh;
+  min-height: 67vh;
 
   background-image: url('../../../public/assets/img/hero.png');
   background-size: cover;
