--- a/styles/modals/recipe-calculator/RecipeCalculatorModal.module.scss
+++ b/styles/modals/recipe-calculator/RecipeCalculatorModal.module.scss
@@ -1,18 +1,24 @@
 @use '../../variables';
 
 .recipeCalculator {
-  position: absolute;
-  top: 24.25em;
+  display: none;
 
-  display: grid;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  top: 50vh;
 
   margin: 0 1.5em;
   padding: 1.85em 1.1em 2.5em 1.1em;
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 15px -1px rgba(0, 0, 0, 0.1);
+}
+
+@media (min-height: 700px) {
+  .recipeCalculator {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .title {
